# k_3_hoot_program_arcium

./: .env  .env.example  .gitignore  .gitmodules  Anchor.toml  README.md  package.json  quiz-info-1756111156149.json  quiz-info-1756463566395.json  quiz-info-1756470724465.json  quiz-info-1756470988524.json  quiz-info-1756471251519.json  quiz-result-1756108305139.json  quiz-result-1756111310101.json  quiz-result-1756111396123.json  quiz-result-1756111618171.json  quiz-result-1756111764257.json  quiz-result-1756325974362.json  quiz-result-1756326096696.json  quiz-result-1756463585024.json  quiz-result-1756470744819.json  quiz-result-1756471017162.json  quiz-result-1756471280780.json  quiz-result-1756471325870.json
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
examples/: complete-demo.ts  leaderboard.ts  quiz-decryption.ts  quiz-demo.ts  quiz-encryption.ts  topic-management.ts
programs/k_3_hoot_program_arcium/: Cargo.toml
programs/k_3_hoot_program_arcium/src/: lib.rs
tests/: k_3_hoot_program_arcium.ts
